vcluster_versioned_docs/version-0.26.0/configure/vcluster-yaml/rbac.mdx
---
title: RBAC
sidebar_label: rbac
sidebar_position: 7
description: Configuration for ...
---

import RBAC from '../../_partials/config/rbac.mdx'

vCluster automatically generates the RBAC roles and bindings it needs based on the features you enable and the resources you choose to [sync](../vcluster-yaml/sync/).

<!-- vale off -->

:::note
Some configuration options modify or add to the default RBAC rules. If you're using any of the following, vCluster includes the necessary permissions. When enabled, the following configuration fields modify the default behavior:

- [`controlPlane.advanced.virtualScheduler`](../vcluster-yaml/control-plane/other/advanced/virtual-scheduler.mdx): Adds required read permissions for the virtual scheduler.
- [`networking.replicateServices.fromHost`](../vcluster-yaml/networking/replicate-services.mdx): Adds required permissions to manage endpoints and services.
- [`integrations.metrics.proxy.nodes`](../../integrations/metrics/metrics-server.mdx): Adds required read permissions for node resources.
- [`plugins`](../vcluster-yaml/plugins.mdx): Adds `roles` and `clusterRoles` defined by each plugin.
- [`sync.toHost.namespaces`](../vcluster-yaml/sync/to-host/advanced/namespaces.mdx): Adds required permissions for vCluster to manage namespaces and service accounts.
:::

## Disable automatic RBAC generation

In environments with strict access controls, users may not have permission to create Kubernetes RBAC resources such as `Role`, `ClusterRole`, or `ServiceAccount`.
In these cases, you can configure vCluster to use a service account that has already been created by an administrator with the necessary permissions.
To do this, disable vCluster’s automatic RBAC generation and reference the managed service account in `vcluster.yaml`:

```yaml title="Use a managed service account and disable default RBAC"
controlPlane:
  advanced:
    serviceAccount:
      name: custom-vc-sa
rbac:
  role:
    enabled: false
  clusterRole:
    enabled: false
```

Alternatively, you can disable `ClusterRole` creation—this is often necessary when users don’t have permission to create `ClusterRole` resources:

```yaml title="Disable only ClusterRole creation"
rbac:
  clusterRole:
    enabled: false
```

## Add custom RBAC rules

Use `extraRules` to configure additional RBAC rules when the automatically generated or [plugin](../vcluster-yaml/plugins.mdx) rules are not sufficient. Use this option sparingly—most configurations should not require it. The following example shows how to apply it:

```yaml title="Add extra RBAC rules"
rbac:
  role:
    enabled: true
    extraRules:
      - apiGroups: [""]
        resources: ["pods/status", "pods/ephemeralcontainers"]
        verbs: ["patch", "update"]
```

## Overwrite rules

For more control over permissions, use `overwriteRules` to disable the default rules generated by the vCluster Helm chart.

When `overwriteRules` is enabled, you must manually define all required rules for the vCluster and its plugins to function. This approach can simplify permission management by allowing the Helm chart to still create the `Role`, `RoleBinding`, and `ServiceAccount`, while you retain full control over the rules.

The following example disables cluster-wide rules and specifies namespace-level permissions:

```yaml title="Overwrite all default RBAC rules"
rbac:
  role:
    enabled: true
    overwriteRules:
      - apiGroups: [""]
        resources: ["pods/status", "pods/ephemeralcontainers"]
        verbs: ["patch", "update"]
  clusterRole:
    enabled: false
```

## Config reference

<RBAC/>
